Snapshot efd0bbd326

* Add support to be able to remove an alert which is not the top 
one on the queue (erikos)
* Fullscreen support (hide toolbar and tray) and tray support in activity 
window (erikos)

Snapshot b023dd17a2

* Fix a crash in the emulator (marco)

Snapshot 276e1ee517

* #4266 Avoid misleading warning every time an activity starts (smcv)
* #4027 Try to make sugar.presence log messages less misleading (smcv)

Snapshot 24fbd1ce1c

* Fix the object chooser (marco)

Snapshot 3c7578577d

* Fix the shell service (marco)

Snapshot fa55b5af09

* Changed default spacing to 15px (from 8px) (benzea)
* Correct the height of the primary palette (benzea)
* Use double leading underscores for callback names to avoid name collisions (erikos)
 
Snapshot 34e2271833

* Activity launching fixes (marco)

Snapshot 6d2828e54e

* Code cleanups (marco)

Snapshot 1eb9932ab3

* sugar.presence tracking handles of buddies (morgs)
* Cleanup activity destruction (marco)
* Added TimeoutAlert (erikos)

Snapshot 29bc0a8a20

* Register to the school server from XO palette (marco)

Snapshot 05668dfad7

* First implementation of the alert bar #2822 and hooked it up 
  to the activity window (erikos)

Snapshot 9c5755d85a

* Put toolbars into event boxes so X fills the background correctly (benzea)

Snapshot 6c7c6a503b

* Activity launching refactoring. (marco)
* Improved logs. (marco)

Snapshot 143f9ac9c6

* Save activity previews to the datastore as binary png images. (tomeu)

Snapshot acca55e861

* #3905 Wait 3 seconds, rather than 3000, if NetworkManager doesn't respond
  (smcv)
* #3909 Cope with both dbus-python both before and after 0.82.2 (smcv)
* #3181 Show always myself in friendstray (erikos)
* #948 Fix passphrase encoding for some passphrases. (bertf)
* #948 Accept ascii passphrases for WEP networks. '$:1a2b3c4d' for hex keys,
  's:my passphrase' for 5 or 13 characters ascii passphrases, or just the plain
  key for ascii passphrases of any other length. (tomeu)